--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,17 +1,15 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
 .app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
   color: #2c3e50;
-  .nav {
-    padding: 30px;
-    a {
-      font-weight: bold;
-      color: #2c3e50;
-      &:global(.router-link-exact-active) {
-        color: #42b983;
-      }
-    }
-  }
+  width: 100%;
+  height: 100%;
 }
