--- a/src/views/home/index.module.scss
+++ b/src/views/home/index.module.scss
@@ -1,3 +1,9 @@
 .view {
-
+  .canvas {
+    border: solid 1px #333333;
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+  .image {
+    display: none;
+  }
 }
